--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=${APP_PROFILE:prod}
+spring.profiles.active=${APP_PROFILE}
 spring.jpa.open-in-view=false
 
 security.oauth2.client.client-id=${CLIENT_ID:myclientid}
