--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ security.oauth2.client.client-secret=${CLIENT_SECRET:myclientsecret}
 jwt.secret=${JWT_SECRET:myjwtsecret}
 jwt.duration=${JWT_DURATION:86400}
 
-cors.origins=${CORS_ORIGINS:https://devsuperior.com.br,http://localhost:3000,http://localhost:5173,https://ecommerceta.netlify.app}
+cors.origins=${CORS_ORIGINS:https://devsuperior.com.br,http://localhost:3000,http://localhost:5173,https://ecommerceta.netlify.app,https://lojinhadoquebrabackend-production.up.railway.app}
 
 spring.mvc.static-path-pattern=/images/**
