Mercado pago methods pay intention and get status

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=${APP_PROFILE}
+spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 
 security.oauth2.client.client-id=${CLIENT_ID:myclientid}
@@ -10,3 +10,7 @@ jwt.duration=${JWT_DURATION:86400}
 cors.origins=${CORS_ORIGINS:https://devsuperior.com.br,http://localhost:3000,http://localhost:5173,https://ecommerceta.netlify.app,https://lojinhadoquebrabackend-production.up.railway.app, https://lojinhadoquebra.com.br}
 
 spring.mvc.static-path-pattern=/images/**
+
+mercado-pago.client-id=227308504402034
+mercado-pago.client-secret=sQk5vli1Cqmxey3Lqv8BxeXyffCSFwwx
+mercado-pago.device-id=NEWLAND_N950__N950NCB901528800
