--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.mvc.static-path-pattern=/images/**
 mercado-pago.client-id=227308504402034
 mercado-pago.client-secret=sQk5vli1Cqmxey3Lqv8BxeXyffCSFwwx
 mercado-pago.device-id=NEWLAND_N950__N950NCB901528800
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
